oxiplate-derive/tests/broken/if/unclosed-if-tag.stderr
error: "%}" expected
 --> tests/broken/if/unclosed-if-tag.rs:4:37
  |
4 | #[oxiplate_inline("{%- if should_do {{ action }}")]
  |                                     ^^^^^^^^^^^^
